--- a/no-touchie.css
+++ b/no-touchie.css
@@ -1456,7 +1456,7 @@ section>* {
     height: auto;
     /* box-shadow: none; */
     border: 0;
-    margin-top: -40px;
+    /* margin-top: -40px; */
 
 }
 
