--- a/responsiveness.css
+++ b/responsiveness.css
@@ -1258,6 +1258,37 @@
     /* #endregion */
    
     /* #region --------------------------------------------- CALENDLY */
+    .calendly-title h1 {
+
+    
+        line-height: 1.25;
+
+
+        margin-bottom: 1rem;
+        margin-top: 1.5rem;
+    }
+
+    .calendly-left h4, .calendly-right h3 {
+        letter-spacing: 0.05rem;
+        font-size: 1.5rem;
+        line-height: 1.25;
+        font-weight: 500;
+    }
+
+    .calendly-left ul li {
+        font-size: 1.2rem;
+    }
+
+    .design-partner-application-boxes {
+        gap: 0.5rem;
+    }
+
+    .calendly-right{
+        /* background-color: pink; */
+        display: flex;
+        flex-direction: column;
+        /* row-gap: 3rem; */
+    }
     /* #endregion */
    
     /* #region --------------------------------------------- FOOTER */
